--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gh-pages": "^6.1.1",
     "johnblund": "file:",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
   },
